<resources>
    <string name="app_name">Destiny Tracker</string>
    <string name="app_dialog_ok">OK</string>
    <string name="app_dialog_gotit">Entendi</string>
    <string name="app_dialog_save">Salvar</string>
    <string name="app_dialog_cancel">Cancelar</string>
    <string name="app_card_raid_normal">Normal</string>
    <string name="app_card_raid_hard">Difícil</string>
    <string name="app_card_checkpoint_header">Checkpoint</string>
    <string name="app_card_char1_header">Char 1</string>
    <string name="app_card_char2_header">Char 2</string>
    <string name="app_card_char3_header">Char 3</string>
    <string name="app_card_chest1_header">1º Baú</string>
    <string name="app_card_chest2_header">2º Baú</string>
    <string name="app_card_chest3_header">3º Baú</string>
    <string name="app_card_chest4_header">4º Baú</string>
    <string name="app_card_chest5_header">5º Baú</string>
    <string name="app_card_chest6_header">6º Baú</string>
    <string name="main_menu_settings">Configurações</string>
    <string name="main_menu_about">Sobre</string>
    <string name="activity_menu_save">Salvar</string>
    <string name="activity_menu_reset">Resetar</string>
    <string name="preference_menu_save">Salvar</string>
    <string name="dialog_about_title">Sobre</string>
    <string name="dialog_about_description">Uma aplicação desenvolvida para ajudar a todos os Guardiões, em sua missão de libertar o Viajante das garras da Treva!</string>
    <string name="dialog_about_congrats_title">Agradecimentos</string>
    <string name="dialog_about_congrats">        Primeiramente a Bungie/Activision, que nos proporcionaram um desafio viciante.\n
        Ao clan Lordes da Guerra por permitir que eu possa jogar com eles e dar muitas risadas.\n
        Ao lider supremo do clan Edsonmacgrath por ser um puto que ajuda pra caralho.\n
        A você que está utilizando esta aplicação e ajudando a melhorá-la.\n
        A todos os desenvolvedores que escreveram os componentes que estou utilizando.\n
        Agradecer também a colaboração com idéias do Ronaldo Hoffmann pela seleção da classe do char e dos baús no nível hard.\n
    </string>
    <string name="dialog_about_license_title">Licenças</string>
    <string name="dialog_about_copyright_title">Direitos Autorais</string>
    <string name="dialog_about_copyright">
        Destiny é marca registrada de Bungie/Activision. Todos os direitos reservados. Este aplicativo foi feito com o intuito de ajudar os jogadores de Destiny a se organizar. Nenhuma tentativa de infringir os direitos foi desejada.
    </string>
    <string name="dialog_clear_title">Aviso</string>
    <string name="dialog_clear_description">Esta ação irá limpar todos os dados da Atividade Selecionada, deseja realmente fazer isso?</string>
    <string name="card_atheon_title">Atheon, Confluxo do Tempo</string>
    <string name="card_atheon_grimoire">
        Ao falar de Atheon, deve-se aceitar certas limitações. Todos somos pouco equipados para entender uma entidade que desafia a simples casualidade. vamos aceitar estas limitações e prosseguir.\nAtheon aguarda na Câmara de Cristal. Da mesma forma que Atheon contorna o \'passado\' e o \'futuro\', é impossível determinar se Atheon criou a Câmara ou se a Câmara criou Atheon. Caminhos casuais convergem em Atheon vindo de cada eixo do volume de tempo-espaço.
    </string>
    <string name="card_atheon_checkpoint1">Portal</string>
    <string name="card_atheon_checkpoint2">Confluxos</string>
    <string name="card_atheon_checkpoint3">Oráculos</string>
    <string name="card_atheon_checkpoint4">Templário</string>
    <string name="card_atheon_checkpoint5">Górgonas</string>
    <string name="card_atheon_checkpoint6">Relíquias</string>
    <string name="card_atheon_checkpoint7">Atheon</string>
    <string name="card_crota_title">Crota, Filho de Oryx</string>
    <string name="card_crota_grimoire">
        Ele se esconde na escuridão subterrânea: o monstro da Luna, o deus-cavaleiro colossal que andou no regolito sob um céu de fogo verde e dizimou o melhor exército de Guardiões já reunido. Nós abandonamos a Lua para não enfrentá-lo.
    </string>
    <string name="card_crota_checkpoint1">Abismo</string>
    <string name="card_crota_checkpoint2">Ponto</string>
    <string name="card_crota_checkpoint3">Uivadores</string>
    <string name="card_crota_checkpoint4">Ir-yüt</string>
    <string name="card_crota_checkpoint5">Crota</string>
    <string name="card_weekly_title">Assaltos Semanais</string>
    <string name="card_weekly_grimoire">
        Nossos inimigos crescem na Treva e enfrentam maiores desafios onde a Luz se encontra. Prepare-se para enfrentar a elite do inimigo em condições perigosas e inconstantes.
    </string>
    <string name="card_weekly_checkpoint1">Assalto Semanal</string>
    <string name="card_weekly_checkpoint2">Assalto Semanal do Anoitecer</string>
    <string name="title_activity_preferences">Configurações</string>
    <string name="settings_category_header">Configurar personagens</string>
    <string name="settings_charList1_header">Configurar Char 1</string>
    <string name="settings_charList2_header">Configurar Char 2</string>
    <string name="settings_charList3_header">Configurar Char 3</string>
</resources>