<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/flexible_space_image_height"
        android:scaleType="centerCrop"
        android:src="@drawable/atheon"
        android:paddingTop="225dp" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/flexible_space_image_height"
        android:background="?attr/colorPrimary" />

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/body">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/flexible_space_image_height"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/card_atheon_grimoire" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/atheon_card_normal"
                    style="@style/RaidCards"
                    android:onClick="cardsOnClickListener">

                    <RelativeLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/app_card_raid_normal"
                            android:id="@+id/textView10"
                            android:layout_alignParentRight="false"
                            android:layout_alignParentEnd="false"
                            android:layout_alignParentBottom="true"
                            android:background="@color/background_floating_material_light"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/atheon_card_hard"
                    style="@style/RaidCards"
                    android:onClick="cardsOnClickListener">

                    <RelativeLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/app_card_raid_hard"
                            android:id="@+id/textView11"
                            android:layout_alignParentRight="false"
                            android:layout_alignParentEnd="false"
                            android:layout_alignParentBottom="true"
                            android:background="@color/background_floating_material_light"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>



    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/ToolbarStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_standard">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:minHeight="?attr/actionBarSize"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/flexible_space_image_height"
            android:background="@android:color/transparent" />
    </LinearLayout>
</FrameLayout>